--- a/styles/main.less
+++ b/styles/main.less
@@ -464,3 +464,30 @@ video, .embed, img { display: block; }
 	.asset:hover .aloha-editable { background:rgba(231,231,231,0.1); .border-radius(3px,3px,3px,3px);}
 
 .asset-inner .content { .clearfix(); }
+
+@media screen and (max-width: 960px) {
+  #populr > .mobile-reset();
+
+  #pop-logo { margin: 0 auto; }
+  #main-content {padding: 10px;}
+  #page, #middle, #footer-container { width: auto !important; }
+  #header-region .asset-container { padding: 10px 15px 15px !important; }
+  #middle #middle-region { margin-bottom: 15px !important; }
+  #middle-region { width: 70% !important; }
+  #sidebar-region {
+    margin-right: 0 !important;
+    width: 28% !important;
+    float: right !important;
+    clear: none !important;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #middle-region { width: 100% !important; }
+  #sidebar-region {
+    clear: both !important;
+    width: 100% !important;
+    float: none !important;
+  }
+  #footer-container .asset-container { margin-bottom: 10px !important; }
+}
